--- a/index.html
+++ b/index.html
@@ -18,24 +18,27 @@
 
 
   <ul class="nav-link-2">
-  <li> <a href="" style="font-weight: bold; margin-right: 40px;">Home</a> </li>
-  <li> <a href="" style="margin-right: 40px; color: rgb(116, 116, 114);">Shop</a> </li>
-  <li> <a href="" style="margin-right: 40px; color: rgb(116, 116, 114);">About us</a> </li>
+  <li class="none-1"> <a href="" style="font-weight: bold; margin-right: 40px;">Home</a> </li>
+  <li class="none-1"> <a href="" style="margin-right: 40px; color: rgb(116, 116, 114);">Shop</a> </li>
+  <li class="none-1"> <a href="" style="margin-right: 40px; color: rgb(116, 116, 114);">About us</a> </li>
   
-  <li> <a href=""></a><img style="width: 20px; margin-right: 10px;" src="assets/shopping-cart_14572403.png" alt=""></li>
-  <li> <a href="" style="font-weight: bold;" >Cart ($56)</a> </li>
+
+  <li> <a href=""></a><img class="cart-item" src="assets/shopping-cart_14572403.png" alt=""></li>
+  <li> <a href="" class="cart-item-1">Cart($56)</a> </li>
   
   
 </ul>
 
  </nav>
 
- <div class="footer-item-1">     
+ <div class="footer-item-1">    
+  
+   
 
 
  <div class="footer-item-2"> 
 
-  <h1 style="font-size: 65px; margin-top: 300px; ">ALWAYS <span style="color: #E95A08;">FRESH <br> FLOWERS</span></h1>
+  <h1 class="h1-part">ALWAYS <span style="color: #E95A08;">FRESH <br> FLOWERS</span></h1>
 
    
 
@@ -43,7 +46,7 @@
  </div>
 
 
-  <img style="width: 570px; height: 355px; margin-top: 240px;" src="assets/hero-flower.png" alt="">
+ <img class="jhamela" src="assets/hero-flower.png" alt="">
 
 
   </div>
