complete mobile responsive challenge part-1

--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@
 
       <div class="challenge-part-2">
 
-        <h2 class="font-10">Flower & Plants <br> Lover</h2>
-        
+<h2 class="font-10 desktop-only">Flower & Plants <br> Lover</h2>
+
+<h2 class="font-10 mobile-only">Flower & Plants Lover</h2>
+
+
 
           <ul>
             <li class="fota">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
