footer part-1 complete

--- a/index.html
+++ b/index.html
@@ -174,10 +174,44 @@
            <img class="trust" src="assets/trusted-badge.png" alt="">
 
 
+           <!-- last main part -->
+
+
+           <section>
+
+            <h2 class="last-main-1"> <span style="color: #E95A08;">Latest</span>  Deals</h2>
+            <p class="last-main-2">Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            <div  class="last-main">
+
+              <div class="last-main-img">
+
+                <img class="main-img-1" src="assets/deal-bloom.png" alt="">
+                <p class="img-text-1">60% Off | Bloom Plant <br> <span class="shop-now">shpo now</span></p>
+                <img class="main-img-2" src="assets/deal-ana.png" alt="">
+                <p class="img-text-2">30% Off | Ana  Plant <br> <span class="shop-now">shpo now</span></p>
+
+
+              </div>
+
+              <img class="main-img-3" src="assets/deal-zabo.png" alt="">
+               <p class="img-text-3">25% Off | Zabo Plant <br> <span class="shop-now" id="shop-222">shpo now</span></p>
+
+            </div>
+
+           </section>
+
   </main>
     
 
   <footer>
+
+    <section>
+      <img class="footer-img" src="assets/news-letter-bg.png" alt="">
+      <h2 class="footer-des">Join the colorful Bunch</h2>
+      <input type="text" class="form" placeholder="Write email">
+      <button class="form-button">Subscribe</button>
+    </section>
 
   </footer>
 </body>
