live link problem checking

--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
       <button class="form-button">Subscribe</button>
     </section>
 
+    <section class="last-section">
+      <img class="foot-img-2" src="assets/logo.png" alt="">
+      <p>Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+    </section>
+
   </footer>
 </body>
 </html>
