--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-2</title>
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
 
@@ -215,7 +215,7 @@
 
     <section class="last-section">
       <img class="foot-img-2" src="assets/logo.png" alt="">
-      <p>Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+      <p class="foot-dis">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
     </section>
 
   </footer>
