--- a/index.html
+++ b/index.html
@@ -214,8 +214,48 @@
     </section>
 
     <section class="last-section">
+
+      <div class="foot-png">    
+
       <img class="foot-img-2" src="assets/logo.png" alt="">
+
       <p class="foot-dis">Indulge your senses with the <br> beauty and fragrance of our fresh <br> flower shop. </p>
+
+</div>
+
+      <div class="link-1">
+
+        <a href="">Home</a>
+        <a href="">About Us</a>
+        <a href="">Blog</a>
+        <a href="">FAQ</a>
+        <a href="">Contact Us</a>
+
+      </div>
+
+      
+      <div class="link-2">
+
+        <a href="">Features</a>
+        <a href="">Pricing</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Terms of service</a>
+        <a href="">Help Center</a>
+
+      </div>
+
+      <div class="foot-all-img">
+        <img src="assets/icon-linkedin.png" alt="">
+
+        <img src="assets/icon-twitter.png" alt="">
+
+        <img src="assets/icon-facebook.png" alt="">
+        
+        <img src="assets/icon-youtube.png" alt="">
+
+      </div>
+
+
     </section>
 
   </footer>
