everything is complete part-2

--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
               <div class="last-main-img">
 
                 <img class="main-img-1" src="assets/deal-bloom.png" alt="">
-                <p class="img-text-1">60% Off | Bloom Plant <br> <span class="shop-now">shpo now</span></p>
+                <p class="img-text-1">60% Off | Bloom Plant <br> <span class="shop-now">shop now</span></p>
                 <img class="main-img-2" src="assets/deal-ana.png" alt="">
-                <p class="img-text-2">30% Off | Ana  Plant <br> <span class="shop-now">shpo now</span></p>
+                <p class="img-text-2">30% Off | Ana  Plant <br> <span class="shop-now">shop now</span></p>
 
 
               </div>
 
               <img class="main-img-3" src="assets/deal-zabo.png" alt="">
-               <p class="img-text-3">25% Off | Zabo Plant <br> <span class="shop-now" id="shop-222">shpo now</span></p>
+               <p class="img-text-3">25% Off | Zabo Plant <br> <span class="shop-now" id="shop-222">shop now</span></p>
 
             </div>
 
